--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	},
 	"dependencies": {
 		"@ant-design/icons": "^5.2.5",
+		"@fingerprintjs/fingerprintjs": "^4.0.0",
 		"ahooks": "^3.1.13",
 		"antd": "5.7.2",
 		"axios": "^0.26.1",
