--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"express": "^4.17.3",
 		"http-proxy-middleware": "^2.0.4",
 		"i18next": "^21.8.14",
+		"moment": "^2.29.4",
 		"next": "12.1.0",
 		"nprogress": "^0.2.0",
 		"qs": "^6.10.3",
