--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
 	"dependencies": {
 		"@ant-design/icons": "^5.2.5",
 		"@fingerprintjs/fingerprintjs": "^4.0.0",
+		"@types/lodash": "^4.14.191",
 		"ahooks": "^3.1.13",
-		"antd": "5.7.2",
+		"antd": "^5.4.0",
 		"axios": "^0.26.1",
 		"express": "^4.17.3",
 		"http-proxy-middleware": "^2.0.4",
@@ -48,7 +49,6 @@
 	},
 	"devDependencies": {
 		"@qhlab/eslint-plugin": "^1.10.0",
-		"@types/lodash": "^4.14.180",
 		"@types/node": "^17.0.25",
 		"@types/nprogress": "^0.2.0",
 		"@types/qs": "^6.9.7",
